cosmos/base/personal-blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-blog
spec:
  ports:
    - name: web
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: personal-blog
